--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -1,16 +1,29 @@
+ 
 <!DOCTYPE html>
-<html>
+<html lang=en>
 
 <head>
-	<title>Header</title>
+	{% if request.user.is_authenticated %}
+	<p><a href="{% url 'home' %}">Home</a> | <a href="{% url 'logout' %}">Logout</a></p>
+	<p>Hello, {{request.user.username}}</p>
+	{% else %}
+	<p><a href="{% url 'home' %}">Home</a> | <a href="{% url 'register' %}">Register</a> | <a href="{% url 'login' %}">Login</a></p>
+	{% endif %}
+	<hr>
+	
 </head>
 
 <body>
-	{% block content %}
-	{% endblock content %}
+
+{% block content %}
+
+{% endblock content %}
+
 </body>
 
 <footer>
-	<h3>this is the footer</h3>
+	<hr>
+	<p>CodingWithMitch Blog Course | 2019</p>
 </footer>
+
 </html>
