--- a/src/personal/templates/personal/home.html
+++ b/src/personal/templates/personal/home.html
@@ -1,10 +1,21 @@
 {% extends 'base.html' %}
 
+
 {% block content %}
 
-<div>
-	<h1> This is the body </h1>
-	<p> stuff in the body </p>
+<div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
+  <h1 class="display-4">Housing Society Management System</h1>
+  <p class="lead">Please register to the portal for your residential society</p>
+</div>
+<hr>
+
+<div class="container">
+	<div class="d-flex flex-column">
+		<h4>Registered users:</h1>
+		{% for user in accounts %}
+			<p>{{user}}</p>
+		{% endfor %}
+	</div>
 </div>
 
 {% endblock content %}
