--- a/src/personal/templates/personal/home.html
+++ b/src/personal/templates/personal/home.html
@@ -48,15 +48,15 @@
 		<div class="left-column col-lg-7 offset-lg-1" style="border: 1px solid #000;">
 			
 			<div class="blog-post-container">
-				<p>Thingy</p>
+				<p>Notice</p>
 			</div>
 			
 			<div class="blog-post-container">
-				<p>Thingy</p>
+				<p>Notice</p>
 			</div>
 
 			<div class="blog-post-container">
-				<p>Thingy</p>
+				<p>Notice</p>
 			</div>
 
 		</div>
