final changes for submission

--- a/src/personal/templates/personal/home.html
+++ b/src/personal/templates/personal/home.html
@@ -42,7 +42,7 @@
 		<!-- blog feed -->
 		<div class="left-column col-lg-7 offset-lg-1">
 
-			<!-- Top 'create post' bar -->
+			<!-- Top 'create post' bar
 			<div class="d-lg-none mb-3">
 				<div class="card m-auto d-flex flex-column p-3">
 					<img class="img-fluid d-block m-auto pb-2" src="{% static 'codingwithmitch_logo.png' %}" width="72" height="72">
@@ -50,7 +50,7 @@
 					<p class="m-auto"><a class="btn btn-primary" href="{% url 'notice:create' %}">Create post</a></p>
 				</div>
 			</div>
-			<!-- end Top 'create post' bar -->
+			end Top 'create post' bar //-->
 
 			<!-- Blog posts-->
 			{% for post in notice_posts %}
